# student-fit

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: app.py  config.py  database.py  streamlit_app.py
app/ai_engine/: calorie_engine.py  gemini_client.py  meal_plan_generator.py  workout_plan_generator.py
app/models/: meal_plan.py  progress_log.py  recipes.py  user.py  users.py  workout.py  workout_plan.py
app/services/: meal_plan_service.py  progress_service.py  recipe_service.py  user_service.py  workout_plan_service.py  workout_service.py
data/: recipes.csv  workouts.csv
scripts/: create_db.py  init_db.py  load_recipes.py  load_workouts.py  migrate_add_meal_type.py  migrate_recipes_add_ingredients_instructions.py  migrate_users_add_cuisine.py
